[build-system]
requires = [
  "setuptools >= 77",
  "wheel",
]
build-backend = "setuptools.build_meta"
[project]
name = "django-hashtag"
description = "Django application provide hashtag functionality."
authors = [
    { name = "DLRSP", email = "dlrsp.dev@gmail.com" },
]
requires-python = ">=3.9"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "django",
    "hashtag",
    "taggit",
    "tags",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Text Processing :: Indexing",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
testing = [
    "coverage",
    "codecov",
    "pytest",
    "pytest-django",
]
linting = [
    "flake8",
    "flake8-pyproject",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-tidy-imports",
    "flake8-typing-imports",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/DLRSP/django-hashtag"
Documentation = "https://github.com/DLRSP/django-hashtag/"
Repository = "https://github.com/DLRSP/django-hashtag"
Issues = "https://github.com/DLRSP/django-hashtag/issues"
Changelog = "https://github.com/DLRSP/django-hashtag/blob/main/CHANGELOG.rst"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
version = { attr = "hashtag.__version__" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.data-files]
"share/django-hashtag/requirements" = [
  "requirements/py310-django32.txt",
  "requirements/py310-django42.txt",
  "requirements/py310-django52.txt",
  "requirements/py311-django42.txt",
  "requirements/py311-django52.txt",
  "requirements/py312-django42.txt",
  "requirements/py312-django52.txt",
  "requirements/py313-django52.txt",
  "requirements/py314-django52.txt",
  "requirements/py39-django42.txt",
]
[tool.distutils.bdist_wheel]
universal = false

[tool.flake8]
max-line-length = 80
select = ["E", "F", "W", "B", "B950", "C", "I", "TYP"]
ignore = ["E203", "E501", "W503", "B950"]
per-file-ignores = [
    "**/migrations/*:B950",
    "*/apps.py:F401",
]
[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hashtag"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 80
target-version = ['py311']
[tool.isort]
profile = "black"

[tool.check-manifest]
ignore = [
    "AGENTS.md",
    "docs/community/third-party-packages.md",
    "docs/tutorial/customize.md",
]

# Read by flake8 when flake8-pyproject is installed (extra `linting`).
[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
django_find_project = false

[tool.towncrier]
package = "hashtag"
package_dir = "src"
filename = "CHANGELOG.rst"
directory = "news/"
issue_format = "`#{issue} <https://github.com/DLRSP/django-hashtag/issues/{issue}>`_"
type = [
    { name = "Process", directory = "process", showcontent = true },
    { name = "Deprecations and Removals", directory = "removal", showcontent = true },
    { name = "Features", directory = "feature", showcontent = true },
    { name = "Bug Fixes", directory = "bugfix", showcontent = true },
    { name = "Vendored Libraries", directory = "vendor", showcontent = true },
    { name = "Improved Documentation", directory = "doc", showcontent = true },
    { name = "Trivial Changes", directory = "trivial", showcontent = false },
]

# bump-my-version
[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "./src/hashtag/__init__.py"
